--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="theme-color" content="#000000" />
 	<meta name="description" content="Web site created using create-react-app" />
-	<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+	<link rel="apple-touch-icon" href="%PUBLIC_URL%/mstile-150x150.png" />
 	<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-	<title>StrawPoll</title>
+	<title>Straw Poll</title>
 	<link href="https://fonts.googleapis.com/css2?family=Amita&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
